compiler/testData/diagnostics/tests/DeferredTypes.fir.kt
// NI_EXPECTED_FILE

interface T {
  val a = <!UNRESOLVED_REFERENCE!>Foo<!>.<!PROPERTY_INITIALIZER_IN_INTERFACE!><!UNRESOLVED_REFERENCE!>bar<!>()<!>
}